--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 <p>This is the text for tab 1</p>
 </div>
 
-<div id=”tab2″ style=”display: none;”> <!– We set its display as none because we don’t want to make this
-tab visible by default. The only visible/active tab should be Tab 1 until the visitor clicks on Tab 2. –>
+<div id=”tab2″ style=”display: none;”> <!– We set its display as none because we don’t want to make this tab visible by default. The only visible/active tab should be Tab 1 until the visitor clicks on Tab 2. –>
 <p>This is the text for tab 2.</p>
 </div>
 </div> <!– End of Content_Area Div –>
