--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
         
         <div id=”Tabs”>
-<ul>
+<ul><!--
 <li id=”li_tab1″ onclick=”tab(‘tab1′)” ><a>Tab 1</a></li>
 <li id=”li_tab2″ onclick=”tab(‘tab2′)”><a>Tab 2</a></li>
 </ul>
@@ -34,11 +34,11 @@
 <p>This is the text for tab 1</p>
 </div>
 
-<div id=”tab2″ style=”display: none;”> <!--We set its display as none because we don’t want to make this tab visible by default. The only visible/active tab should be Tab 1 until the visitor clicks on Tab 2. -->
+<div id=”tab2″ style=”display: none;”> <!--We set its display as none because we don’t want to make this tab visible by default. The only visible/active tab should be Tab 1 until the visitor clicks on Tab 2. 
 <p>This is the text for tab 2.</p>
 </div>
-</div> <!-- End of Content_Area Div -->
-</div> <!-- End of Tabs Div -->
+</div> End of Content_Area Div 
+</div> End of Tabs Div  -->
       </div>
     </header>
 
@@ -74,7 +74,7 @@
     
   </body>
 </html>
-
+<!--
 <script type=”text/javascript”>
 function tab(tab) {
 document.getElementById(‘tab1′).style.display = ‘none’;
@@ -84,4 +84,4 @@ document.getElementById(‘li_tab2′).setAttribute(“class”, “”);
 document.getElementById(tab).style.display = ‘block’;
 document.getElementById(‘li_’+tab).setAttribute(“class”, “active”);
 }
-</script>
+</script>-->
