--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
           <a href="https://github.com/MayberFox/default" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
         
+        <div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
+        <!--
         <div id=”Tabs”>
-<ul><!--
+<ul>
 <li id=”li_tab1″ onclick=”tab(‘tab1′)” ><a>Tab 1</a></li>
 <li id=”li_tab2″ onclick=”tab(‘tab2′)”><a>Tab 2</a></li>
 </ul>
