--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <a href="#">Link 2</a>
     <a href="#">Link 3</a>
   </div>
+  <script src="DropdownMenu.js"></script>
 </div>
         <!--
         <div id=”Tabs”>
