--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </section>
         
         <div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  <button onclick="myFunction()" class="dropbtn">Dropdown<script src="DropdownMenu.js"></script></button>
   <div id="myDropdown" class="dropdown-content">
     <a href="#">Link 1</a>
     <a href="#">Link 2</a>
     <a href="#">Link 3</a>
   </div>
-  <script src="DropdownMenu.js"></script>
+  
 </div>
         <!--
         <div id=”Tabs”>
