--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <a href="#">Link 3</a>
   </div>
 </div>
+<script>
  /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
 function myFunction() {
@@ -52,6 +53,7 @@ window.onclick = function(event) {
     }
   }
 }
+</script>
         <!--
         <div id=”Tabs”>
 <ul>
