--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Dropdown</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="#">Link 1</a>
+    <a href="www.google.com">Google</a>
     <a href="#">Link 2</a>
     <a href="#">Link 3</a>
   </div>
