--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     <a href="#">Link 3</a>
   </div>
 </div>
+
+<ul>
+  <li><a class="active" href="#home">Menu</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
 <script>
  /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
