--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
 
     <header>
-      <div class="container"><br><br><br><br>
-        <h1>Default</h1>
+      <div class="container">
+        <h1><br><br><br><br>Default</h1>
         <h2></h2>
 
         <section id="downloads">
