--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1><br><br><br><br>Default</h1>
+        <h1><br>>Default</h1>
         <h2></h2>
 
         <section id="downloads">
