--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 </div>
 
 <ul>
-  <li><a class="active" href="#home">Menu</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <a class="active" href="#home">Menu</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+><a href="#about">About</a>
 </ul>
 <script>
  /* When the user clicks on the button, 
