--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <a class="active" href="#home">Menu</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
-><a href="#about">About</a>
+<a href="#about">About</a>
 </ul>
 <script>
  /* When the user clicks on the button, 
