--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
   </head>
 
 <ul>
-  <a class="active" href="#home">Menu</a>
+  <a class="dropdown"><button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  <div id="myDropdown" class="dropdown-content"></a> 
+    <a href="www.google.com">Google</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>href="#home">Menu</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
 <a href="#about">About</a>
 </ul>
+
+        <div class="dropdown">
+  
+</div>
+
   <body>
 
     <header>
@@ -30,14 +40,6 @@
           <a href="https://github.com/MayberFox/default" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
         
-        <div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-  <div id="myDropdown" class="dropdown-content">
-    <a href="www.google.com">Google</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div>
-</div>
 
 
 <script>
