--- a/index.html
+++ b/index.html
@@ -16,16 +16,10 @@
   <div id="myDropdown" class="dropdown-content"></a> 
     <a href="www.google.com">Google</a>
     <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div>href="#home">Menu</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-<a href="#about">About</a>
+    <a href="#">Link 3</a></div>
+
 </ul>
 
-        <div class="dropdown">
-  
-</div>
 
   <body>
 
