--- a/index.html
+++ b/index.html
@@ -14,28 +14,10 @@
 <ul>
   <a class="dropdown"><button onclick="myFunction()" class="dropbtn">Dropdown</button>
   <div id="myDropdown" class="dropdown-content"></a> 
-    <a href="www.google.com">Google</a>
+    <a href="https://www.google.com">Google</a>
     <a href="#">Link 2</a>
     <a href="#">Link 3</a></div>
-
 </ul>
-
-
-  <body>
-
-    <header>
-      <div class="container">
-        <h1><br>>Default</h1>
-        <h2></h2>
-
-        <section id="downloads">
-          <a href="https://github.com/MayberFox/default/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/MayberFox/default/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/MayberFox/default" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-        
-
-
 <script>
  /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
@@ -58,6 +40,23 @@ window.onclick = function(event) {
   }
 }
 </script>
+
+  <body>
+
+    <header>
+      <div class="container">
+        <h1><br>Default</h1>
+        <h2></h2>
+
+        <section id="downloads">
+          <a href="https://github.com/MayberFox/default/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/MayberFox/default/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/MayberFox/default" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+        
+
+
+
         <!--
         <div id=”Tabs”>
 <ul>
