--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="http://mayberfox.github.io/Momentum-Labs/">Momentum</a>
     <a href="http://mayberfox.github.io/Frequently-Asked-Questions/">FAQ's</a>
   </div>
-</div>
+</div></ul>
 <script>
  /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
@@ -40,13 +40,13 @@ window.onclick = function(event) {
   }
 }
 </script>
-</ul>
+
 
   <body>
 
     <header>
       <div class="container">
-        <h1><br>Defaiult</h1>
+        <h1><br>Default</h1>
         <h2></h2>
 
         <section id="downloads">
