--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <title>Default by MayberFox</title>
   </head>
 
-<ul><div class="dropdown">
+<ul><li><div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Menu</button>
   <div id="myDropdown" class="dropdown-content">
     <a href="http://mayberfox.github.io/SNHS-Home-Page/">Home</a>
     <a href="http://mayberfox.github.io/Applications/">Apply</a>
     <a href="http://mayberfox.github.io/Momentum-Labs/">Momentum</a>
-    <a href="http://mayberfox.github.io/Frequently-Asked-Questions/">FAQ's</a>
+    <a href="http://mayberfox.github.io/Frequently-Asked-Questions/">FAQ's</a></li>
   </div>
 </div></ul>
 <script>
@@ -46,7 +46,7 @@ window.onclick = function(event) {
 
     <header>
       <div class="container">
-        <h1><br>Default</h1>
+        <h1><br>Defeault</h1>
         <h2></h2>
 
         <section id="downloads">
