--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   </head>
 
 <ul><li><div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Menu</button>
+  <button onclick="myFunction()" class="dropbtn">Menu</button></li>
   <div id="myDropdown" class="dropdown-content">
     <a href="http://mayberfox.github.io/SNHS-Home-Page/">Home</a>
     <a href="http://mayberfox.github.io/Applications/">Apply</a>
     <a href="http://mayberfox.github.io/Momentum-Labs/">Momentum</a>
-    <a href="http://mayberfox.github.io/Frequently-Asked-Questions/">FAQ's</a></li>
+    <a href="http://mayberfox.github.io/Frequently-Asked-Questions/">FAQ's</a>
   </div>
 </div>
 <script>
@@ -47,7 +47,7 @@ window.onclick = function(event) {
 
     <header>
       <div class="container">
-        <h1><br>Defeeault</h1>
+        <h1><br>Defeeult</h1>
         <h2></h2>
 
         <section id="downloads">
