--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Default by MayberFox</title>
   </head>
 
-<ul><div class="dropdown">
-  <li><button onclick="myFunction()" class="dropbtn">Menu</button></li>
+<ul><li><div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Menu</button></li>
   <div id="myDropdown" class="dropdown-content">
     <a href="http://mayberfox.github.io/SNHS-Home-Page/">Home</a>
     <a href="http://mayberfox.github.io/Applications/">Apply</a>
