--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
 <ul><li><div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Menu</button></li>
+  <button onclick="myFunction()" class="dropbtn">Menu</button>
   <div id="myDropdown" class="dropdown-content">
     <a href="http://mayberfox.github.io/SNHS-Home-Page/">Home</a>
     <a href="http://mayberfox.github.io/Applications/">Apply</a>
@@ -40,7 +40,7 @@ window.onclick = function(event) {
   }
 }
 </script>
-</ul>
+</li></ul>
 
 
   <body>
