--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
     <title>Default by MayberFox</title>
   </head>
 
-<ul><li><div class="dropdown">
+<ul><li class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Menu</button>
   <div id="myDropdown" class="dropdown-content">
     <a href="http://mayberfox.github.io/SNHS-Home-Page/">Home</a>
     <a href="http://mayberfox.github.io/Applications/">Apply</a>
     <a href="http://mayberfox.github.io/Momentum-Labs/">Momentum</a>
     <a href="http://mayberfox.github.io/Frequently-Asked-Questions/">FAQ's</a>
-  </div>
-</div>
+  </div></li>
 <script>
  /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
@@ -40,14 +39,14 @@ window.onclick = function(event) {
   }
 }
 </script>
-</li></ul>
+</ul>
 
 
   <body>
 
     <header>
       <div class="container">
-        <h1><br>Defeeueelt</h1>
+        <h1><br>Defeeue3elt</h1>
         <h2></h2>
 
         <section id="downloads">
