--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="http://mayberfox.github.io/Applications/">Apply</a>
     <a href="http://mayberfox.github.io/Momentum-Labs/">Momentum</a>
     <a href="http://mayberfox.github.io/Frequently-Asked-Questions/">FAQ's</a>
-  </div></li>
+  </div></li></ul>
 <script>
  /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
@@ -39,14 +39,14 @@ window.onclick = function(event) {
   }
 }
 </script>
-</ul>
+
 
 
   <body>
 
     <header>
       <div class="container">
-        <h1><br>Defeeue3elt</h1>
+        <h1><br>Defeeue32elt</h1>
         <h2></h2>
 
         <section id="downloads">
