--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="http://mayberfox.github.io/Applications/">Apply</a>
     <a href="http://mayberfox.github.io/Momentum-Labs/">Momentum</a>
     <a href="http://mayberfox.github.io/Frequently-Asked-Questions/">FAQ's</a>
-  </div></li></ul>
+  </div></li>
 <script>
  /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
@@ -39,6 +39,7 @@ window.onclick = function(event) {
   }
 }
 </script>
+</ul>
 
 
 
@@ -46,7 +47,7 @@ window.onclick = function(event) {
 
     <header>
       <div class="container">
-        <h1><br>Defeeue32elt</h1>
+        <h1><br>Defeeu3e32elt</h1>
         <h2></h2>
 
         <section id="downloads">
