--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
 
 <ul><li class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Menu</button>
-  <div id="myDropdown" class="dropdown-content">
+  <a href="#" class="dropbtn">Dropdown</a>
+    <div class="dropdown-content">
     <a href="http://mayberfox.github.io/SNHS-Home-Page/">Home</a>
     <a href="http://mayberfox.github.io/Applications/">Apply</a>
     <a href="http://mayberfox.github.io/Momentum-Labs/">Momentum</a>
