--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
 <ul><li class="dropdown">
-  <a href="#" class="dropbtn">Dropdown</a>
+  <a href="#" class="dropbtn">Menu</a>
     <div class="dropdown-content">
     <a href="http://mayberfox.github.io/SNHS-Home-Page/">Home</a>
     <a href="http://mayberfox.github.io/Applications/">Apply</a>
