--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <title>Default by MayberFox</title>
   </head>
 
-<ul><li class="dropdown">
+<ul><li>Evergreen Valley High School SNHS</li>
+  <li class="dropdown">
   <a href="#" class="dropbtn">Menu</a>
     <div class="dropdown-content">
     <a href="http://mayberfox.github.io/SNHS-Home-Page/">Home</a>
@@ -47,7 +48,7 @@ window.onclick = function(event) {
 
     <header>
       <div class="container">
-        <h1><br>Defeeqwwww22u3e32elt</h1>
+        <h1><br>Default</h1>
         <h2></h2>
 
         <section id="downloads">
