--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <title>Default by MayberFox</title>
   </head>
 
-<ul><li>Evergreen Valley High School SNHS</li>
+<ul>
+  <a class="active" href="http://mayberfox.github.io/SNHS-Home-Page/">Evergreen Valley High School SNHS</a></li>
   <li class="dropdown">
   <a href="#" class="dropbtn">Menu</a>
     <div class="dropdown-content">
-    <a href="http://mayberfox.github.io/SNHS-Home-Page/">Home</a>
     <a href="http://mayberfox.github.io/Applications/">Apply</a>
     <a href="http://mayberfox.github.io/Momentum-Labs/">Momentum</a>
     <a href="http://mayberfox.github.io/Frequently-Asked-Questions/">FAQ's</a>
@@ -48,7 +48,7 @@ window.onclick = function(event) {
 
     <header>
       <div class="container">
-        <h1><br>Default</h1>
+        <h1><br>default</h1>
         <h2></h2>
 
         <section id="downloads">
