--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
 <ul>
-  <a class="active" href="http://mayberfox.github.io/SNHS-Home-Page/">Evergreen Valley High School SNHS</a></li>
+  <li><a class="active" href="http://mayberfox.github.io/SNHS-Home-Page/">Evergreen Valley High School SNHS</a></li>
   <li class="dropdown">
   <a href="#" class="dropbtn">Menu</a>
     <div class="dropdown-content">
