--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="http://mayberfox.github.io/Momentum-Labs/">Momentum</a>
     <a href="http://mayberfox.github.io/Frequently-Asked-Questions/">FAQ's</a>
   </div></li>
-<script>
+  <script>
  /* When the user clicks on the button, 
 toggle between hiding and showing the dropdown content */
 function myFunction() {
@@ -40,6 +40,13 @@ window.onclick = function(event) {
   }
 }
 </script>
+<li><div id="tfheader">
+		<form id="tfnewsearch" method="get" action="http://www.google.com">
+		        <input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input type="submit" value="search" class="tfbutton">
+		</form>
+	<div class="tfclear"></div></li>
+	</div>
+
 </ul>
 
 
