--- a/index.html
+++ b/index.html
@@ -40,7 +40,13 @@ window.onclick = function(event) {
   }
 }
 </script>
+<!-- Google Custom Search Element -->
+<li><div id=”cse” style=”width:100%;”>Loading</div></li>
+<script src=”http://www.google.com/jsapi” type=”text/javascript”></script>
+<script type=”text/javascript”>google.load(‘search’, ‘1’);
+          google.setOnLoadCallback(function(){var cse = new google.search.CustomSearchControl();cse.draw(‘cse’);}, true);</script>
 
+  
 </ul>
 
 
