--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ window.onclick = function(event) {
 }
 </script>
 <!-- Google Custom Search Element -->
-<li><script>
+<li> <gcse:searchbox-only></gcse:searchbox-only></li>
+<script>
   (function() {
     var cx = '004187277009431036136:-b9aimn1ouk';
     var gcse = document.createElement('script');
@@ -51,7 +52,7 @@ window.onclick = function(event) {
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(gcse, s);
   })();
-</script></li>
+</script>
 <gcse:search></gcse:search>
 
   
