--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ window.onclick = function(event) {
 
     <header>
       <div class="container">
-        <h1><br>default</h1>
+        <h1><br>defaeult</h1>
         <h2></h2>
 
         <section id="downloads">
