--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ window.onclick = function(event) {
 }
 </script>
 <!-- Google Custom Search Element -->
-<li> <gcse:searchbox-only></gcse:searchbox-only></li>
+<li>
 <script>
   (function() {
     var cx = '004187277009431036136:-b9aimn1ouk';
@@ -52,7 +52,7 @@ window.onclick = function(event) {
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(gcse, s);
   })();
-</script>
+</script></li>
 <gcse:search></gcse:search>
 
   
