--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ window.onclick = function(event) {
 </script>
 <!-- Google Custom Search Element -->
 <li>
-<script src="https://www.google.com/jsapi" type="text/javascript">
+<script>
   (function() {
     var cx = '004187277009431036136:-b9aimn1ouk';
     var gcse = document.createElement('script');
